2010-07-13  Daniel Noll  <daniel@nuix.com>

	* java/util/zip/InflaterHuffmanTree.java:
	(buildTree): Fix for #36560.

2010-04-12  Ivan Maidanski  <ivmai@mail.ru>

	* vm/reference/gnu/classpath/VMStackWalker.java: Make the default
	constructor private.
	* vm/reference/gnu/classpath/VMSystemProperties.java: Likewise and make class final.
	* vm/reference/gnu/java/lang/VMCPStringBuilder.java: Likewise.
	* vm/reference/gnu/java/lang/VMInstrumentationImpl.java: Likewise.
	* vm/reference/gnu/java/lang/management/VMClassLoadingMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMCompilationMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMGarbageCollectorMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMMemoryMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMMemoryManagerMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMMemoryPoolMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMOperatingSystemMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMRuntimeMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/lang/management/VMThreadMXBeanImpl.java:
	Likewise.
	* vm/reference/gnu/java/net/VMPlainDatagramSocketImpl.java: Likewise.
	Make class non-public and add missing full stop in comment.
	* vm/reference/gnu/java/nio/VMPipe.java: Make the default constructor private.
	* vm/reference/gnu/java/nio/VMSelector.java: Likewise and make class non-public.
	* vm/reference/gnu/java/security/jce/prng/VMSecureRandom.java:
	Make the default constructor private.
	(Spinner.stop()): Make package-private to ease access from enclosing class.
	* vm/reference/java/io/VMFile.java: Make the default constructor private.
	Fix punctuation in documentation.
	(getTotalSpace(String)): Make package-private.
	(getFreeSpace(String)): Likewise.
	(getUsableSpace(String)): Likewise.
	(setReadable(String,boolean,boolean)): Likewise.